add new dataset UI

--- a/attachments/style/home.css
+++ b/attachments/style/home.css
@@ -1,4 +1,20 @@
-.session_action {position: absolute; right: 50px; top: 50px;}
+.userControls {position: absolute; right: 50px; top: 50px;}
+.icon { opacity: 0.4; float: left; width: 35px; height: 35px; line-height: 35px; }
+
+.new_dataset { line-height: 35px; padding-right: 10px; margin-right: 25px}
+.new_dataset .icon { background: url('images/add.png') center center no-repeat; }
+.session_actions, .user_actions { float: left; }
+.account .option:hover { background: #DCF0F4; }
+.userControls .option {float: left; min-width: 35px; height: 35px;}
+.userControls .option:hover { background: #DCF0F4; }
+
+.account {cursor: pointer; -moz-border-radius: 2px; -webkit-border-radius: 2px; border-radius: 2px;}
+.account .user_settings .icon { background: url('images/settings.png') center center no-repeat; }
+.account .gravatar {float: left}
+.account .gravatar img {margin: 4px; border: 1px solid #D0E8F0}
+.account .logout .icon { background: url('images/logout.png') center center no-repeat; }
+.account .username { float: left; margin-right: 4px; font-style: normal; color: #6D6D6C; line-height: 35px; }
+
 
 ul#landing_nav {
   margin: 0;
@@ -76,16 +92,6 @@ ul#landing_nav {
         cursor: pointer; cursor: hand;
         border-color: #000;
         color: #444444; }
-
-.account {cursor: pointer; -moz-border-radius: 2px; -webkit-border-radius: 2px; border-radius: 2px;}
-.account .option {float: left; min-width: 35px; height: 35px;}
-.account .option:hover { background: #DCF0F4; }
-.account .icon { opacity: 0.4; float: left; width: 35px; height: 35px; line-height: 35px; }
-.account .user_settings .icon { background: url('images/settings.png') center center no-repeat; }
-.account .gravatar {float: left}
-.account .gravatar img {margin: 4px; border: 1px solid #D0E8F0}
-.account .logout .icon { background: url('images/logout.png') center center no-repeat; }
-.account .username { float: left; margin-right: 4px; font-style: normal; color: #6D6D6C; line-height: 35px; }
 
 /*Copyright (c), Development Seed  
 All rights reserved.
