--- a/attachments/style/home.css
+++ b/attachments/style/home.css
@@ -1,5 +1,5 @@
 .userControls {position: absolute; right: 50px; top: 50px;}
-.icon { opacity: 0.4; float: left; width: 35px; height: 35px; line-height: 35px; }
+.navIcon { opacity: 0.4; float: left; width: 35px; height: 35px; line-height: 35px; }
 
 .new_dataset { line-height: 35px; padding-right: 10px; margin-right: 25px}
 .new_dataset .icon { background: url('images/add.png') center center no-repeat; }
@@ -56,7 +56,6 @@ ul#landing_nav {
   padding: 0;
   font-size: 14px; }
   ul#landing_nav > li {
-    display: inline;
     margin-right: 0.5em;
     text-shadow: 0 1px 0 #ddd; }
     ul#landing_nav > li a {
@@ -758,3 +757,66 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
   -webkit-border-radius: 5px;
   border-radius: 5px;
 }
+
+span.icon { display: inline-block; width: 14px; height: 12px; margin: auto; position: relative; top: 0; *top: 0px; background-image: url('images/iconic-sprite.png'); background-repeat: no-repeat; }
+span.icon { top: 1px }
+span.icon.book { background-position: 0 0 }
+.action:hover span.icon.book { background-position: 0 -15px }
+span.icon.calendar { background-position: 0 -30px }
+.action:hover span.icon.calendar { background-position: 0 -45px }
+span.icon.chat { background-position: 0 -60px }
+.action:hover span.icon.chat { background-position: 0 -75px }
+span.icon.check { background-position: 0 -90px }
+.action:hover span.icon.check { background-position: 0 -103px }
+span.icon.clock { background-position: 0 -116px }
+.action:hover span.icon.clock { background-position: 0 -131px }
+span.icon.cog { background-position: 0 -146px }
+.action:hover span.icon.cog { background-position: 0 -161px }
+span.icon.comment { background-position: 0 -176px }
+.action:hover span.icon.comment { background-position: 0 -190px }
+span.icon.cross { background-position: 0 -204px }
+.action:hover span.icon.cross { background-position: 0 -219px }
+span.icon.downarrow { background-position: 0 -234px }
+.action:hover span.icon.downarrow { background-position: 0 -249px }
+span.icon.fork { background-position: 0 -264px }
+.action:hover span.icon.fork { background-position: 0 -279px }
+span.icon.heart { background-position: 0 -294px }
+.action:hover span.icon.heart { background-position: 0 -308px }
+span.icon.home { background-position: 0 -322px }
+.action:hover span.icon.home { background-position: 0 -337px }
+span.icon.key { background-position: 0 -352px }
+.action:hover span.icon.key { background-position: 0 -367px }
+span.icon.leftarrow { background-position: 0 -382px }
+.action:hover span.icon.leftarrow { background-position: 0 -397px }
+span.icon.lock { background-position: 0 -412px }
+.action:hover span.icon.lock { background-position: 0 -427px }
+span.icon.loop { background-position: 0 -442px }
+.action:hover span.icon.loop { background-position: 0 -457px }
+span.icon.magnifier { background-position: 0 -472px }
+.action:hover span.icon.magnifier { background-position: 0 -487px }
+span.icon.mail { background-position: 0 -502px }
+.action:hover span.icon.mail { background-position: 0 -514px }
+span.icon.move { background-position: 0 -526px }
+.action:hover span.icon.move { background-position: 0 -541px }
+span.icon.pen { background-position: 0 -556px }
+.action:hover span.icon.pen { background-position: 0 -571px }
+span.icon.pin { background-position: 0 -586px }
+.action:hover span.icon.pin { background-position: 0 -601px }
+span.icon.plus { background-position: 0 -616px }
+.action:hover span.icon.plus { background-position: 0 -631px }
+span.icon.reload { background-position: 0 -646px }
+.action:hover span.icon.reload { background-position: 0 -660px }
+span.icon.rightarrow { background-position: 0 -674px }
+.action:hover span.icon.rightarrow { background-position: 0 -689px }
+span.icon.rss { background-position: 0 -704px }
+.action:hover span.icon.rss { background-position: 0 -719px }
+span.icon.tag { background-position: 0 -734px }
+.action:hover span.icon.tag { background-position: 0 -749px }
+span.icon.trash { background-position: 0 -764px }
+.action:hover span.icon.trash { background-position: 0 -779px }
+span.icon.unlock { background-position: 0 -794px }
+.action:hover span.icon.unlock { background-position: 0 -809px }
+span.icon.uparrow { background-position: 0 -824px }
+.action:hover span.icon.uparrow { background-position: 0 -839px }
+span.icon.user { background-position: 0 -854px }
+.action:hover span.icon.user { background-position: 0 -869px }
