--- a/attachments/style/home.css
+++ b/attachments/style/home.css
@@ -65,6 +65,11 @@ ul#landing_nav {
   ul#landing_nav > li {
     margin-right: 0.5em;
     text-shadow: 0 1px 0 #ddd; }
+  ul#landing_nav > li.disclaimer {
+    font-size: 11px;
+    width: 175px;
+    margin: 10px 3px;
+    line-height: 12px;}
     ul#landing_nav > li a {
       color: #000; }
       ul#landing_nav > li a.login {
