--- a/attachments/style/home.css
+++ b/attachments/style/home.css
@@ -1,15 +1,14 @@
 .userControls {position: absolute; right: 50px; top: 50px;}
-.navIcon { opacity: 0.4; float: left; width: 35px; height: 35px; line-height: 35px; }
+.navIcon { float: left; width: 35px; height: 35px; line-height: 35px; }
 
 .notification-banner {position: relative;bottom: 63px;left: 53px;}
 .forkedFrom { font-size: 10px; position: relative; top: -1px; }
 .new_dataset { line-height: 35px; padding-right: 10px; margin-right: 25px}
 .new_dataset .navIcon { background: url('images/add.png') center center no-repeat; }
 .session_actions, .user_actions { float: left; }
-.account .option:hover { background: #DCF0F4; }
 .userControls .option {float: left; min-width: 35px; height: 35px;}
-.userControls .option:hover { background: #DCF0F4; }
-
+.account .option, .userControls .option { opacity: .5; -webkit-transition: .5s all; -moz-transition: .5s all; transition: .5s all; }
+.account .option:hover, .userControls .option:hover { opacity: 1; text-decoration: none;}
 .account {cursor: pointer; -moz-border-radius: 2px; -webkit-border-radius: 2px; border-radius: 2px;}
 .account .user_settings .navIcon { background: url('images/settings.png') center center no-repeat; }
 .account .gravatar {float: left}
@@ -86,65 +85,22 @@ ul#landing_nav {
           background-color: #D0E8F0; }
 
 .settings {
-  width: 600px;
-  overflow: auto;
-  margin: 0 auto;
-  padding: 5% 0;}
+  }
   .settings p.welcome {overflow: auto}
   .settings .available {background-color: #AEFFA8 !important}
   .settings .notAvailable {background-color: #FFC1BF !important}
   .settings .loading {background-image:url('images/loader.gif'); background-repeat: no-repeat; background-position: 97% center;}
   .settings img {float: left}
   .settings .welcome-text {line-height: 37px;height: 37px;display: block;float: left;margin-left: 10px}
-  .settings .labelContainer {clear: both}
   .settings .username-message {height: 38px; line-height: 38px; padding-left: 10px;display: inline;}
   .settings h4 {clear: left; margin-bottom: 5px}
   .settings .submitContainer {margin-top: 10px}
-  .settings input:not(.button),
-  .settings textarea {
-    width: 60%;
-    display: block;
-    padding:8px 10px 5px 10px;
-    font-size:22px;
-    border-bottom:1px solid rgba(255,255,255,0.99);
-    background-color:#f8f7f3;
-    -moz-border-radius:3px;
-    -webkit-border-radius:3px;
-    -o-border-radius:3px;
-    -ms-border-radius:3px;
-    -khtml-border-radius:3px;
-    margin-bottom: 15px;
-    border-radius:3px;
-    -moz-box-shadow:rgba(0,0,0,0.21) 0 2px 2px 0px inset;
-    -webkit-box-shadow:rgba(0,0,0,0.21) 0 2px 2px 0px inset;
-    -o-box-shadow:rgba(0,0,0,0.21) 0 2px 2px 0px inset;
-    box-shadow:rgba(0,0,0,0.21) 0 2px 2px 0px inset }
-  .settings .cancel {margin-left: 5px; line-height: 40px; float: left}
-  .settings .cancel:hover { text-decoration: underline; cursor: pointer; cursor: hand; }
   .settings input[type='hidden'] {
     display: none; }
   .settings input, .settings p {
     float: left;
     margin-bottom: 10px },
-  .settings form input {
-    font-size: 21px; }
-    .settings .button {
-      clear: left;
-      float: left;
-    	padding: 7px 10px;
-    	font-size:22px;
-    	font-weight:normal;
-    	color:#FAFAF0;
-    	background-color:#a69567;
-    	-moz-border-radius:3px;
-    	-webkit-border-radius:3px;
-    	-o-border-radius:3px;
-    	-ms-border-radius:3px;
-    	-khtml-border-radius:3px;
-    	border-radius:3px;
-    	text-shadow:rgba(0,0,0,0.3) 0 -1px 1px}
-      .settings .button:hover {
-      	background-color:#3e3e3e;cursor: pointer; cursor: hand; }
+
 
 /*Copyright (c), Development Seed  
 All rights reserved.
@@ -709,54 +665,20 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 }
 
 .dialog {
+  top: 40px;
   position: fixed;
   left: 0;
   width: 100%;
   text-align: center;
 }
 
-.dialog-frame {
-  margin: 0 auto;
+.modal form {
   text-align: left;
-  background: white;
-  border: 1px solid #3a5774;
+  margin-bottom: 0px !important;
 }
 
-.dialog-border {
-  border: 4px solid #D0E8F0;
-}
-
-.dialog-header {
-  background: #e0edfe;
-  padding: 10px;
-  font-weight: bold;
-  font-size: 1.6em;
-  color: #000;
-  cursor: move;
-}
-
-.dialog-body {
-  overflow: auto;
-  font-size: 1.3em;
-  padding: 15px;
-}
-
-.dialog-instruction {
-  padding: 0 0 7px;
-}
-
-.dialog-footer {
-  font-size: 1.3em;
-  background: #eee;
-  padding: 10px;
-}
-
-.dialog-busy {
-  width: 400px;
-  border: none;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  border-radius: 5px;
+.modal textarea {
+  width: 98%;
 }
 
 /*CSS3BUTTONS*/
