--- a/attachments/style/home.css
+++ b/attachments/style/home.css
@@ -2,7 +2,7 @@
 .navIcon { float: left; width: 35px; height: 35px; line-height: 35px; }
 
 .notification-banner {position: relative;bottom: 63px;left: 53px;}
-.forkedFrom { font-size: 10px; position: relative; top: -1px; }
+.forkedFrom { font-size: 10px; position: relative; top: -1px; display:block;}
 .new_dataset { line-height: 35px; padding-right: 10px; margin-right: 25px}
 .new_dataset .navIcon { background: url('images/add.png') center center no-repeat; }
 .session_actions, .user_actions { float: left; }
@@ -16,8 +16,7 @@
 .account .logout .navIcon { background: url('images/logout.png') center center no-repeat; }
 .account .username { float: left; margin-right: 4px; font-style: normal; color: #6D6D6C; line-height: 35px; }
 
-.datasetsContainer{width:750px;margin:0 auto;}
-.datasetsContainer h2 {
+.datasetsContainer h2, .trendingSetsContainer h2 {
   padding-left: 22px;
   margin-top: 15px;
   margin-bottom: 0;
@@ -38,7 +37,7 @@
 .datasets dd.avatar img{display:block;width:35px;height:35px;}
 .datasets .detailed p{clear:left;float:left;margin-top:6px;line-height:16px;}
 .datasets .subtitle{clear:both;font-size:11px;line-height:20px;}
-.datasets .actions {display: none}
+.datasets .actions {display: none; margin-top:-12px;}
 .datasets li:hover .actions {display: block; position: absolute; top: 17px; right: 10px;}
 .datasets li:hover {background-color: #EEEEEE;}
 .datasets li:hover .dataset {color: #2B547D}
@@ -71,18 +70,6 @@ ul#landing_nav {
     line-height: 12px;}
     ul#landing_nav > li a {
       color: #000; }
-      ul#landing_nav > li a.login {
-        padding: 5px 8px;
-        -webkit-border-radius: 5px;
-        -moz-border-radius: 5px;
-        border-radius: 5px;
-        background-color: #DCF0F4;
-        border-top: 1px solid #D0E8F0;
-        -webkit-box-shadow: 0 1px 1px #ddd;
-        -moz-box-shadow: 0 1px 1px #ddd;
-        box-shadow: 0 1px 1px #ddd; }
-        ul#landing_nav > li a.login:hover {
-          background-color: #D0E8F0; }
 
 .settings {
   }
