--- a/attachments/style/home.css
+++ b/attachments/style/home.css
@@ -10,14 +10,14 @@
 .userControls .option {float: left; min-width: 35px; height: 35px;}
 .account {cursor: pointer; -moz-border-radius: 2px; -webkit-border-radius: 2px; border-radius: 2px;}
 
-.option, .userControls .option { opacity: .5; -webkit-transition: .5s all; -moz-transition: .5s all; transition: .5s all; }
+.option, .userControls .option { opacity: .7; -webkit-transition: .5s all; -moz-transition: .5s all; transition: .5s all; }
 .option:hover, .userControls .option:hover { opacity: 1; text-decoration: none;}
 .gravatar {float: left}
 .gravatar img {margin: 4px; border: 1px solid #D0E8F0}
 .user_settings .navIcon { background: url('images/settings.png') center center no-repeat; }
 .logout .navIcon { background: url('images/logout.png') center center no-repeat; }
 .user_profile .username { float: left; font-style: normal; color: #FFF; width: 35px; height: 35px; line-height: 35px;}
-.user_profile .label {float: left; margin-right: 8px; font-style: normal; color: #6D6D6C; line-height: 35px;}
+.user_profile .label {float: left; margin-right: 8px; font-style: normal; color: #FFF; line-height: 35px;}
 .user_profile .username img { padding: 8px }
 
 .datasetsContainer h2, .trendingSetsContainer h2 {
